syntax = "proto2";

package mediapipe;

// Contains the packet frequency information.
message PacketFrequency {
  // Packet frequency (packets per second).
  optional double packet_frequency_hz = 1;

  // A label that identifies what this packet frequency is for. Eg. "Gaze",
  // "Gesture", etc.
  optional string label = 2;
}
