// Copyright 2019 The MediaPipe Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package mediapipe;

import "mediapipe/framework/calculator.proto";

// Options for PacketFrequencyCalculator.
message PacketFrequencyCalculatorOptions {
  extend mediapipe.CalculatorOptions {
    optional PacketFrequencyCalculatorOptions ext = 168468918;
  }

  // Time window (in seconds) over which the packet frequency is computed. Must
  // be greater than 0 and less than 100 seconds (in order to limit memory
  // usage).
  optional double time_window_sec = 1 [default = 3.0];

  // Text identifiers for the input streams.
  repeated string label = 2;
}
